--- a/_data/slider.yml
+++ b/_data/slider.yml
@@ -1,9 +1,9 @@
 
-- title: "<span>All in One</span> documentation site for digital product authors"
-  button_label: "Purchase Now"
-  button_link: "https://themeix.com/product/doxy-documentation-website-jekyll-template/"
+- title: "<span>Learn FHIR</span> with concept overviews, examples and hands-on labs."
+  button_label: "Get Started"
+  button_link: "/"
 
-- title: "<span>Number #1</span> documentation template in Jekyll"
-  button_label: "Create a Ticket"
-  button_link: "/pages/submit-ticket"
+- title: "<span>Number #1</span> online resource for learning Azure API for FHIR."
+  button_label: "Get Started"
+  button_link: "/"
 
